--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ nav {
 .main-links {
     height: 100px;
     /*TEST*/
-    background-color: coral;
+    background-color: black;
 }
 
 .main-links ul {
@@ -92,12 +92,49 @@ nav a {
 
 
 /*inizio playlist*/
+
+.crea-playlist {
+    padding-bottom: 15px;
+}
+
 .playlist-container {
     height: calc( 100% - 240px);
     min-height: 100px;
     /*TEST*/
-    background-color: lightblue;
+    background-color: black;
     overflow-y: auto;
+}
+
+.playlist-single-name ul {
+    list-style-type: none;
+}
+
+.playlist-single-name li {
+    padding-top: 10px;
+}
+
+.playlist-single-name a {
+    text-decoration: none;
+    color: #868686;
+}
+
+.plus-icon_container {
+    width: 30px;
+    height: 30px;
+    background-color: #868686;
+    float: left;
+}
+
+.plus-icon {
+    line-height: 32px;
+    font-size: 26px;
+    color: black;
+}
+
+.playlist-text {
+    float: left;
+    padding: 6px;
+    color: #868686;
 }
 /*fine playlist*/
 
@@ -106,6 +143,16 @@ nav a {
 .install-app {
     background-color: black;
     height: 70px;
+}
+
+.install-app-text {
+    padding-bottom: 8px;
+}
+
+.border-top {
+    border-top: 1px solid grey;
+    margin-right: 25px;
+    padding-top: 12px
 }
 /*fine install app*/
 
