--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,12 @@ nav {
     background-color: black;
 }
 
-.logo_left img {
-    width: 50px;
+.logo_icon {
+    padding-top: 20px;
+}
+
+.logo_icon img {
+    width: 80px;
     height: auto;
     color: white;
 }
@@ -251,6 +255,16 @@ footer {
         padding-left: 10px;
     }
 
+    .logo_icon {
+        display: none;
+    }
+
+    .logo_icon_responsive {
+        display: block;
+        width: 20px;
+        height: auto;
+    }
+
     .main-content {
         width: calc( 100% - 40px );
     }
@@ -260,7 +274,8 @@ footer {
     }
 
     .logo {
-        display: none;
+        display: block;
+        height: 27px;
     }
 
     .many_links_right {
@@ -272,6 +287,32 @@ footer {
     }
 
     .profile-app-container {
+        display: block;
+        height: 660px;
+        position: relative;
+    }
+
+    .install-app-text {
+        display: none;
+    }
+
+    .profile-app {
+        border: none;
+        padding: 0;
+        margin: 0;
+        position: absolute;
+        bottom: 0;
+    }
+
+    .profile-app_right {
+        display: none;
+    }
+}
+
+
+
+@media screen and (min-width: 650px) {
+    .logo_icon_responsive {
         display: none;
     }
 }
