--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ img {
     display: table;
 }
 
+p {
+    color: grey;
+    padding-left: 5px;
+}
 
 /*FINE COMMON*/
 
@@ -233,14 +237,16 @@ nav a {
 .wrapper-main h2 {
     color: white;
     font-size: 30px;
+    padding-left: 5px;
 }
 
-.wrapper-recently-played-images {
+.wrapper-images {
     padding-top: 22px;
+    padding-bottom: 22px;
     display: flex;
 }
 
-.wrapper-recently-played-images img {
+.wrapper-images img {
     width: calc( 100% / 6 );
     height: auto;
     padding: 5px;
@@ -503,6 +509,13 @@ footer {
         display: none;
     }
 
+    .wrapper-images {
+        flex-wrap: wrap;
+    }
+
+    .wrapper-images img {
+        width: calc( 100% / 2 );
+    }
 
 }
 
@@ -512,6 +525,15 @@ footer {
     .logo_icon_responsive {
         display: none;
     }
+
+    .wrapper-images {
+        flex-wrap: wrap;
+    }
+
+    .wrapper-images img {
+        width: calc( 100% / 4 );
+    }
+
 }
 
 
