--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,19 @@ footer {
     background-color: #282828;
     overflow: hidden;
     display: flex;
-    /*TEST*/
+    color: rgb(133, 133, 133);
+}
+
+i:hover {
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(133, 133, 133);
+}
+
+a:hover {
     color: white;
 }
 
