--- a/css/style.css
+++ b/css/style.css
@@ -253,13 +253,27 @@ nav a {
     position: relative;
 }
 
-.disc {
-    width: 100%;
-    opacity: 0.5;
+.overlay {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
 }
 
-div:hover {
+.overlay:hover {
     opacity: 1;
+    color: white;
+}
+
+.disc {
+    width: 100%;
+    position: relative;
+}
+
+.disc:hover {
+    opacity: 0.5;
 }
 
 .disc img {
@@ -407,6 +421,29 @@ a:hover {
     background-color: grey;
     margin: 7px;
 }
+
+.time-bar {
+    width: 30%;
+    height: 100%;
+    background-color: white;
+    border-radius: 10px;
+    float: left;
+}
+
+.time-bar-second {
+    width: 30%;
+    height: 100%;
+    background-color: white;
+}
+
+.time-bar:hover {
+    background-color: rgb(150, 209, 31);
+}
+
+.time-bar-second:hover {
+    background-color: rgb(150, 209, 31);
+}
+
     /*fine .media-control-bottom*/
 
 
